0.9.15
- Fixed: Gravity Gun not being able to get objects behind fences.
- Fixed: Gravity Gun not allowing to punt non-debris ragdolls.
- Fixed: Gravity Gun effects breaking when transitioning from third-person to first-person view.
- Fixed: Gravity Gun not respecting setting for glow mode.
- Fixed: Gravity Gun light comes from player instead of the gun.
- Changed: Do not give all weapons on missing map scripts.

0.9.14
- Fixed: Reset leftover global states if none provided in mapscript
- Improved: The menu looks slightly better now also with a new "Info" page
- Added: A hint for players that have not yet opened the gamemode menu
- Added: A warning notification for players starting the gamemode in Singleplayer mode
- Added: Player name on top of death effect

0.9.13
- Fixed: d2_coast_11: Not giving everyone weapon_bugbait
- Fixed: d2_coast_03: Combine binoculars corrupting view for all players.
- Fixed: Players not being credited for kills with ragdolls and mega gravity gun.
- Added: env_screenoverlay multiplayer support.

0.9.12
- Fixed: Only auto switch to weapons when still holding the empty gun.
- Fixed: HL2:EP1/HL2:DM game types not working correctly [Regression]
- Fixed: NPCs ragdolls would have different pose when killed with gravity gun.
- Improved: Gravity gun functions now closer to the original and interpolates at clients frame time.
- Added: Support for ep1_citadel_00 (Episode 1)
- Added: Support for ep1_citadel_01 (Episode 1)
- Added: Support for ep1_citadel_02b (Episode 1)
- Added: Support for ep1_citadel_03 (Episode 1)
- Added: Support for ep1_citadel_03 (Episode 1)

0.9.11
- Fixed: Lua error on death when dropped weapon can not be spawned.
- Fixed: Player shouting out enemies in pre-criminal state.
- Fixed: Settings camera menu will follow the player now.
- Improved: Gravity Gun on ground now has random colors instead of black.
- Improved: Minor performance optimizations for the gravity gun.
- Improved: Walking animations on moving platforms.
